--- a/front/angular.json
+++ b/front/angular.json
@@ -105,6 +105,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "front"
+    }
+  },
+  "defaultProject": "front",
+  "cli": {
+    "analytics": false
+  }
 }
